# shellcove

./: Cargo.toml  Dockerfile  LICENSE  README.md
conf/: default.toml
src/: configuration.rs  constants.rs  error.rs  handler.rs  main.rs  messages.rs
src/actors/: mod.rs  ssh_actor.rs  ws_actor.rs
